--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI ChatBot | Intelligent Assistant</title>
-    <link rel="stylesheet" href="style.css?v=2">
+    <link rel="stylesheet" href="style.css?v=4">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -48,6 +48,28 @@
 
             <!-- Input Area -->
             <div class="input-area">
+                <div class="control-row">
+                    <div class="control-group">
+                        <label for="modelDropdownButton">Model</label>
+                        <select id="modelSelect" class="visually-hidden-select" aria-hidden="true"></select>
+                        <div class="model-dropdown" id="modelDropdown">
+                            <button id="modelDropdownButton" class="model-dropdown-button" type="button" aria-haspopup="listbox" aria-expanded="false">
+                                <span id="modelDropdownLabel">Loading...</span>
+                                <i class="fas fa-chevron-down"></i>
+                            </button>
+                            <div id="modelDropdownMenu" class="model-dropdown-menu" role="listbox" aria-label="Select model"></div>
+                        </div>
+                    </div>
+                    <div class="control-group control-toggle">
+                        <label for="ragEnabled">RAG Mode</label>
+                        <input id="ragEnabled" type="checkbox" />
+                    </div>
+                    <div class="control-group control-toggle">
+                        <label for="webEnabled">Web Mode</label>
+                        <input id="webEnabled" type="checkbox" />
+                    </div>
+                </div>
+                <div class="rag-status" id="ragStatus">RAG: 0 documents loaded. Paste long text directly into chat to auto-save it.</div>
                 <div class="input-container">
                     <textarea 
                         id="userInput" 
